Builder for Client improved, mostly done builder for Server.